# android

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .travis.yml  .yamllint  AGENTS.md  AudioRecorder.kt  CLA.md  Gemfile  PR_DESCRIPTION.md  README.md  SECURITY.md  build.gradle  build.gradle.kts  gradle.lockfile  gradle.properties  keystore.properties  nestor.keystore  renovate.json  renovate.json5  settings.gradle  settings.gradle.kts
.github/: copilot-instructions.md  dependabot.yml  mock-google-services.json  pull_request_template.md  release-drafter.yml  stale.yml
.github/ISSUE_TEMPLATE/: Bug_report.md  config.yml  feature_request.md  task.yml
.github/actions/create-release-notes/: action.yml
.github/actions/create-release-number/: action.yml  action.yml～
.github/actions/download-translations/: action.yml
.github/actions/inflate-secrets/: action.yml
.github/actions/setup-build-env/: action.yml
.github/actions/upload-sarif-results/: action.yml
.github/actions/upload-test-results/: action.yml
.github/e2e/homeassistant/: .gitignore  configuration.yaml  maestro-auth.sh
.github/e2e/homeassistant/.storage/: assist_pipeline.pipelines  auth  auth_provider.homeassistant  bluetooth.passive_update_processor  core.analytics  core.area_registry  core.config  core.config_entries  core.device_registry  core.entity_registry  core.restore_state  core.uuid  frontend.system_data  homeassistant.exposed_entities  http  http.auth  lovelace.map  lovelace_dashboards  onboarding  person  repairs.issue_registry
.github/scripts/: check_licenses.py  merge_sarif.py
.github/workflows/: beta.yml  beta.yml～  ci.yml  daily.yaml  e2e.yaml  main.yml  monthly.yaml  monthly.yml  onPrereleased.yml  onPush.yml  onTag.yml  pr-emulator-wtf.yml  pr.yml  pr.yml～  prepareNextRelease.yml  release.yml  release.yml～  renovate-lockfiles.yml  restrict-task-creation.yml  updateScreenshot.yml  weekly.yaml  weekly.yaml～  weekly.yml
.maestro/: onboarding.yaml
.travis/: before_install.sh  mock-google-services.json  script.sh  secrets.tar.enc
app/: build.gradle  build.gradle.kts  google-services.json  gradle.lockfile  lint-baseline.xml  lint.xml  proguard-rules.pro
app/dependencies/: fullReleaseRuntimeClasspath.txt
app/libs/: improv-sdk-0.0.2.aar  improv-sdk-snapshot.aar
app/release/: app-release.aab
app/src/debug/: AndroidManifest.xml
app/src/full/: AndroidManifest.xml
app/src/full/play/: contact-email.txt  contact-website.txt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: icon_meta.json  mdi_id_map.json
app/src/main/java/: HomeAssistantApplication.kt
app/src/minimal/java/: AndroidManifest.xml
app/src/quest/: AndroidManifest.xml
app/src/release/: AndroidManifest.xml
app/src/test/: AndroidManifest.xml
automotive/: build.gradle  build.gradle.kts  gradle.lockfile  lint-baseline.xml
automotive/dependencies/: fullReleaseRuntimeClasspath.txt
automotive/src/debug/: AndroidManifest.xml
automotive/src/full/: AndroidManifest.xml
automotive/src/main/: AndroidManifest.xml
build-logic/: settings.gradle.kts
build-logic/convention/: build.gradle.kts
buildSrc/: .gitignore  build.gradle.kts
common/: build.gradle  build.gradle.kts  gradle.lockfile  lint-baseline.xml  lint.xml
common-full/: build.gradle.kts
common-full/src/main/: AndroidManifest.xml
common-minimal/: build.gradle.kts
common-minimal/src/main/: AndroidManifest.xml
common/schemas/io.homeassistant.companion.android.common.database.HomeAssistantDatabase/: 1.json
common/schemas/io.homeassistant.companion.android.database.AppDatabase/: 24.json  25.json  26.json  27.json  28.json  29.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  40.json  41.json  42.json  43.json  44.json  45.json  46.json  47.json  48.json  49.json  50.json  51.json  52.json
common/schemas/io.shpro.companion.android.database.AppDatabase/: 1.json  2.json
common/src/main/: AndroidManifest.xml
config/detekt/: detekt.yml
data/: build.gradle  build.gradle.kts
docs/: network-ipv6-webview-dns.md
docs/plans/: 2026-01-15-frontend-screen-refactor-design.md
docs/wear-dashboard/: discovery-notes.md  implementation-plan.md
domain/: build.gradle  build.gradle.kts
fastlane/: Appfile  Fastfile
google/: build.gradle.kts
google/src/main/: AndroidManifest.xml
gradle/: dependencies.gradle  gradle-daemon-jvm.properties  libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lint/: build.gradle.kts  gradle.lockfile
microfrontend/: build.gradle.kts  gradle.lockfile
microfrontend/src/main/cpp/: CMakeLists.txt  MicroFrontendWrapper.cpp  MicroFrontendWrapper.h  MicroFrontend_jni.cpp
microwakeword/: build.gradle.kts  gradle.lockfile
microwakeword/src/main/cpp/: CMakeLists.txt  Logging.h  MicroFrontendWrapper.cpp  MicroFrontendWrapper.h  MicroWakeWordEngine.cpp  MicroWakeWordEngine.h  MicroWakeWord_jni.cpp
onboarding/: README.md  build.gradle.kts  gradle.lockfile  lint-baseline.xml
onboarding/src/androidTest/: AndroidManifest.xml
onboarding/src/debug/: AndroidManifest.xml
onboarding/src/main/: AndroidManifest.xml
provides-sensor-processor/: build.gradle.kts  gradle.lockfile
resources/src/main/: AndroidManifest.xml
sensor-catalog-processor/: gradle.lockfile
shared/: build.gradle.kts
shared/src/main/: AndroidManifest.xml
testing-unit/: build.gradle.kts  gradle.lockfile
travis/: before_install.sh  secrets.tar.enc
values/: strings.xml
values-cs/: strings.xml
values-da/: strings.xml
values-de/: strings.xml
values-es/: strings.xml
values-fr/: strings.xml
values-it/: strings.xml
values-lv/: strings.xml
values-nl-rNL/: strings.xml
values-pl-rPL/: strings.xml
values-ro/: strings.xml
values-sv/: strings.xml
wear/: build.gradle.kts  gradle.lockfile  lint-baseline.xml
wear/dependencies/: fullReleaseRuntimeClasspath.txt
wear/src/debug/: google-services .json
wear/src/main/: AndroidManifest.xml
wear/src/test/: AndroidManifest.xml
wearos_app/: build.gradle.kts
wearos_app/src/main/: AndroidManifest.xml
(+4235 files in other folders)
